fix chevron position and some alignment

--- a/apps/corona-banner/src/style.css
+++ b/apps/corona-banner/src/style.css
@@ -1,6 +1,7 @@
 @font-face {
   font-family: "Duplex-Sans-Regular";
-  src:local("Duplex-Sans-Regular"), url(../../../fonts/Duplex-Sans-Regular.otf) format("truetype");
+  src: local("Duplex-Sans-Regular"),
+    url(../../../fonts/Duplex-Sans-Regular.otf) format("truetype");
 }
 
 html,
@@ -56,7 +57,11 @@ a {
 
 .stat {
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
+
 .stat-value {
   font-size: 0.875rem;
   font-weight: 700;
@@ -90,9 +95,12 @@ a {
 }
 
 .chevron-right {
-  filter: invert(92%) sepia(10%) saturate(494%) hue-rotate(316deg) brightness(109%) contrast(85%);
+  filter: invert(92%) sepia(10%) saturate(494%) hue-rotate(316deg)
+    brightness(109%) contrast(85%);
   transform: rotate(270deg);
   width: 15px;
+  position: relative;
+  bottom: 2px;
 }
 
 @media (min-width: 768px) {
@@ -104,7 +112,7 @@ a {
     font-size: 1.2rem;
   }
 
-  .mobile-hidden{
+  .mobile-hidden {
     display: initial;
   }
 
@@ -112,7 +120,8 @@ a {
     align-self: center;
   }
 
-  .stat-value, .stat-percent {
+  .stat-value,
+  .stat-percent {
     font-size: 1.2rem;
   }
 
@@ -132,5 +141,4 @@ a {
   .chevron-right {
     width: 20px;
   }
-
 }
